--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js"
   ],
   "dependencies": {
+    "bluebird": "^3.4.7",
     "co": "^4.6.0",
     "debug": "^2.2.0",
     "jade": "~1.11.0",
@@ -30,6 +31,7 @@
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
     "koa-views": "^5.0.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
     "runkoa": "^1.3.1"
   },
