--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "一键式网站",
   "main": "index.js",
   "scripts": {
-    "serve": "node koa2_service/bin/run"
+    "serve": "node koa2_service/bin/run",
+    "client": "webpack-dev-server  --progress --inline --colors"
   },
   "repository": {
     "type": "git",
@@ -33,10 +34,62 @@
     "koa-views": "^5.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
-    "runkoa": "^1.3.1"
+    "runkoa": "^1.3.1",
+    "nodemon": "^1.8.1"
   },
   "devDependencies": {
-    "nodemon": "^1.8.1"
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-register": "^6.18.0",
+    "babel-runtime": "^6.18.0",
+    "css-loader": "^0.26.0",
+    "del": "^2.2.2",
+    "element-ui": "^1.0.3",
+    "eslint": "^3.11.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-vue": "^1.0.0",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "fastclick": "^1.0.6",
+    "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
+    "gulp": "^3.9.1",
+    "gulp-env": "^0.4.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sequence": "^0.4.6",
+    "gulp-util": "^3.0.7",
+    "html-webpack-plugin": "^2.24.1",
+    "image-webpack-loader": "^3.0.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "moment": "^2.17.0",
+    "open": "^0.0.5",
+    "pm2": "^2.1.6",
+    "react-cookie": "^1.0.1",
+    "serve-favicon": "^2.3.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "vue": "^2.1.3",
+    "vue-awesome-swiper": "^2.2.3",
+    "vue-hot-reload-api": "^2.0.6",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^10.0.1",
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.0.3",
+    "vue-strap": "^1.1.32",
+    "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.1.3",
+    "vue-toast": "^2.0.3",
+    "vue-validator": "^3.0.0-alpha.1",
+    "vuex": "^2.0.0",
+    "vuex-router-sync": "^2.1.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "author": "cupyong",
   "license": "ISC",
