--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bluebird": "^3.4.7",
     "co": "^4.6.0",
     "debug": "^2.2.0",
+    "elasticsearch": "^12.1.3",
     "jade": "~1.11.0",
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
@@ -36,8 +37,8 @@
     "koa-views": "^5.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
-    "runkoa": "^1.3.1",
-    "nodemon": "^1.8.1"
+    "nodemon": "^1.8.1",
+    "runkoa": "^1.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
